# general-service/api/qubic/aggregation/general/v1/service.pb.gw.go
@@ -89,6 +89,33 @@ func local_request_AggregationGeneralService_GetIdentitiesBalances_0(ctx context
 	return msg, metadata, err
 }
 
+func request_AggregationGeneralService_GetIdentitiesAssets_0(ctx context.Context, marshaler runtime.Marshaler, client AggregationGeneralServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetIdentitiesAssetsRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.GetIdentitiesAssets(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_AggregationGeneralService_GetIdentitiesAssets_0(ctx context.Context, marshaler runtime.Marshaler, server AggregationGeneralServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetIdentitiesAssetsRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.GetIdentitiesAssets(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterAggregationGeneralServiceHandlerServer registers the http handlers for service AggregationGeneralService to "mux".
 // UnaryRPC     :call AggregationGeneralServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -134,6 +161,26 @@ func RegisterAggregationGeneralServiceHandlerServer(ctx context.Context, mux *ru
 			return
 		}
 		forward_AggregationGeneralService_GetIdentitiesBalances_0(annotatedContext, mux, outboundMarshaler, w, req, response_AggregationGeneralService_GetIdentitiesBalances_0{resp.(*GetIdentitiesBalancesResponse)}, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_AggregationGeneralService_GetIdentitiesAssets_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/qubic.aggregation.general.v1.AggregationGeneralService/GetIdentitiesAssets", runtime.WithHTTPPathPattern("/getIdentitiesAssets"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_AggregationGeneralService_GetIdentitiesAssets_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_AggregationGeneralService_GetIdentitiesAssets_0(annotatedContext, mux, outboundMarshaler, w, req, response_AggregationGeneralService_GetIdentitiesAssets_0{resp.(*GetIdentitiesAssetsResponse)}, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -209,6 +256,23 @@ func RegisterAggregationGeneralServiceHandlerClient(ctx context.Context, mux *ru
 		}
 		forward_AggregationGeneralService_GetIdentitiesBalances_0(annotatedContext, mux, outboundMarshaler, w, req, response_AggregationGeneralService_GetIdentitiesBalances_0{resp.(*GetIdentitiesBalancesResponse)}, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_AggregationGeneralService_GetIdentitiesAssets_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/qubic.aggregation.general.v1.AggregationGeneralService/GetIdentitiesAssets", runtime.WithHTTPPathPattern("/getIdentitiesAssets"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_AggregationGeneralService_GetIdentitiesAssets_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_AggregationGeneralService_GetIdentitiesAssets_0(annotatedContext, mux, outboundMarshaler, w, req, response_AggregationGeneralService_GetIdentitiesAssets_0{resp.(*GetIdentitiesAssetsResponse)}, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
@@ -230,12 +294,23 @@ func (m response_AggregationGeneralService_GetIdentitiesBalances_0) XXX_Response
 	return response.Balances
 }
 
+type response_AggregationGeneralService_GetIdentitiesAssets_0 struct {
+	*GetIdentitiesAssetsResponse
+}
+
+func (m response_AggregationGeneralService_GetIdentitiesAssets_0) XXX_ResponseBody() interface{} {
+	response := m.GetIdentitiesAssetsResponse
+	return response.Assets
+}
+
 var (
 	pattern_AggregationGeneralService_GetCurrentIpoBids_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getCurrentIpoBids"}, ""))
 	pattern_AggregationGeneralService_GetIdentitiesBalances_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getIdentitiesBalances"}, ""))
+	pattern_AggregationGeneralService_GetIdentitiesAssets_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"getIdentitiesAssets"}, ""))
 )
 
 var (
 	forward_AggregationGeneralService_GetCurrentIpoBids_0     = runtime.ForwardResponseMessage
 	forward_AggregationGeneralService_GetIdentitiesBalances_0 = runtime.ForwardResponseMessage
+	forward_AggregationGeneralService_GetIdentitiesAssets_0   = runtime.ForwardResponseMessage
 )
