# general-service/api/qubic/aggregation/general/v1/service_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.1
+// - protoc-gen-go-grpc v1.6.2
 // - protoc             (unknown)
 // source: qubic/aggregation/general/v1/service.proto
 
@@ -21,6 +21,7 @@ const _ = grpc.SupportPackageIsVersion9
 const (
 	AggregationGeneralService_GetCurrentIpoBids_FullMethodName     = "/qubic.aggregation.general.v1.AggregationGeneralService/GetCurrentIpoBids"
 	AggregationGeneralService_GetIdentitiesBalances_FullMethodName = "/qubic.aggregation.general.v1.AggregationGeneralService/GetIdentitiesBalances"
+	AggregationGeneralService_GetIdentitiesAssets_FullMethodName   = "/qubic.aggregation.general.v1.AggregationGeneralService/GetIdentitiesAssets"
 )
 
 // AggregationGeneralServiceClient is the client API for AggregationGeneralService service.
@@ -29,6 +30,7 @@ const (
 type AggregationGeneralServiceClient interface {
 	GetCurrentIpoBids(ctx context.Context, in *GetCurrentIpoBidsRequest, opts ...grpc.CallOption) (*GetCurrentIpoBidsResponse, error)
 	GetIdentitiesBalances(ctx context.Context, in *GetIdentitiesBalancesRequest, opts ...grpc.CallOption) (*GetIdentitiesBalancesResponse, error)
+	GetIdentitiesAssets(ctx context.Context, in *GetIdentitiesAssetsRequest, opts ...grpc.CallOption) (*GetIdentitiesAssetsResponse, error)
 }
 
 type aggregationGeneralServiceClient struct {
@@ -59,12 +61,23 @@ func (c *aggregationGeneralServiceClient) GetIdentitiesBalances(ctx context.Cont
 	return out, nil
 }
 
+func (c *aggregationGeneralServiceClient) GetIdentitiesAssets(ctx context.Context, in *GetIdentitiesAssetsRequest, opts ...grpc.CallOption) (*GetIdentitiesAssetsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetIdentitiesAssetsResponse)
+	err := c.cc.Invoke(ctx, AggregationGeneralService_GetIdentitiesAssets_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // AggregationGeneralServiceServer is the server API for AggregationGeneralService service.
 // All implementations must embed UnimplementedAggregationGeneralServiceServer
 // for forward compatibility.
 type AggregationGeneralServiceServer interface {
 	GetCurrentIpoBids(context.Context, *GetCurrentIpoBidsRequest) (*GetCurrentIpoBidsResponse, error)
 	GetIdentitiesBalances(context.Context, *GetIdentitiesBalancesRequest) (*GetIdentitiesBalancesResponse, error)
+	GetIdentitiesAssets(context.Context, *GetIdentitiesAssetsRequest) (*GetIdentitiesAssetsResponse, error)
 	mustEmbedUnimplementedAggregationGeneralServiceServer()
 }
 
@@ -80,6 +93,9 @@ func (UnimplementedAggregationGeneralServiceServer) GetCurrentIpoBids(context.Co
 }
 func (UnimplementedAggregationGeneralServiceServer) GetIdentitiesBalances(context.Context, *GetIdentitiesBalancesRequest) (*GetIdentitiesBalancesResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method GetIdentitiesBalances not implemented")
+}
+func (UnimplementedAggregationGeneralServiceServer) GetIdentitiesAssets(context.Context, *GetIdentitiesAssetsRequest) (*GetIdentitiesAssetsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetIdentitiesAssets not implemented")
 }
 func (UnimplementedAggregationGeneralServiceServer) mustEmbedUnimplementedAggregationGeneralServiceServer() {
 }
@@ -139,6 +155,24 @@ func _AggregationGeneralService_GetIdentitiesBalances_Handler(srv interface{}, c
 	return interceptor(ctx, in, info, handler)
 }
 
+func _AggregationGeneralService_GetIdentitiesAssets_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetIdentitiesAssetsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AggregationGeneralServiceServer).GetIdentitiesAssets(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: AggregationGeneralService_GetIdentitiesAssets_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AggregationGeneralServiceServer).GetIdentitiesAssets(ctx, req.(*GetIdentitiesAssetsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // AggregationGeneralService_ServiceDesc is the grpc.ServiceDesc for AggregationGeneralService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -153,6 +187,10 @@ var AggregationGeneralService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetIdentitiesBalances",
 			Handler:    _AggregationGeneralService_GetIdentitiesBalances_Handler,
+		},
+		{
+			MethodName: "GetIdentitiesAssets",
+			Handler:    _AggregationGeneralService_GetIdentitiesAssets_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
